css/style.css
/* ... */
.animatedModal-on .close-popup-modal {
    opacity: 1;
}

.modal-content h2 {
    font-family: 'Playfair Display', serif;
    font-size: 40px;
    line-height: 50px;
}


/* contact
==================================================*/

#contact {
    padding: 100px 0;
    background: #f3f3f3
}

#contact-form input,
#contact-form textarea {
    height: 50px;
    margin-bottom: 10px;
    border-radius: 0;
}

#contact-form label {
    display: block;
    margin-bottom: .2em;
    font-size: 13px;
    line-height: 13px;
    font-size: 1.3rem;
    line-height: 1.3rem;
    color: #000;
}

#contact-form label.error {
    margin-top: 10px;
    margin-bottom: 1em;
    font-size: 12px;
    line-height: 12px;
    font-size: 1.2rem;
    line-height: 1.2rem;
    color: #D33E43;
    margin-left: 10px
}

#contact-form input[type="text"].error,
#contact-form input[type="password"].error,
#contact-form input[type="date"].error,
#contact-form input[type="datetime"].error,
#contact-form input[type="datetime-local"].error,
#contact-form input[type="month"].error,
#contact-form input[type="week"].error,
#contact-form input[type="email"].error,
#contact-form input[type="number"].error,
#contact-form input[type="search"].error,
#contact-form input[type="tel"].error,
#contact-form input[type="time"].error,
#contact-form input[type="url"].error,
#contact-form textarea.error {
    border-color: #D33E43
}

textarea {
    resize: none;
}

fieldset {
    border: 0px;
    margin: 0;
    padding: 0
}

.required {
    color: #e9266d
}

#success,
#error {
    display: none
}

#success p,
#error p {
    display: block;
}

#success p {
    color: #425BB5;
    font-size: 15px;
    text-align: center;
    padding: 10px;
    border: 2px solid #425BB5;
    margin-top: 10px;
}

#error p {
    color: #D33E43;
    font-size: 15px;
    text-align: center;
    padding: 10px;
    border: 2px solid #D33E43;
    margin-top: 10px;
}

#submit {
    background-color: #425BB5;
    color: #fff;
    padding: 10px 40px;
    border-radius: 0;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-weight: bold;
    width: 100%;
}

.social {
    padding-left: 0;
    list-style: none;
    margin-top: 20px;
}

.social li {
    float: left;
}

.social li a {
    color: #333;
    font-size: 35px;
    margin-right: 15px;
    transition: all .3s;
    -webkit-transition: all .3s;
}

.social li a:hover {
    color: #425BB5;
}


/* Responsive media queries
==================================================*/

@media (max-width: 991px) {
    .portfolio .categories-grid .categories ul li a {
        padding: 0 2px;
    }
}

@media (max-width: 768px) {
    .timeline-event-copy {
        width: 90%;
        left: 2em;
    }
}

@media (max-width: 500px) {
    h1 {
        font-family: 'Playfair Display', serif;
        font-size: 50px;
        line-height: 50px;
    }
    #home,
    .disply-table {
        height: 600px;
    }
    .about-border {
        width: 265px;
    }
    .portfolio .categories-grid .categories ul li {
        list-style: none;
        margin: 10px 0;
    }
}

@media (max-width: 420px) {
    nav li {
        margin: 6px;
    }
    nav li a {
        font-size: 10px;
    }
}

